k8s/server.yml
kind: Service
apiVersion: v1
metadata:
  name: server
spec:
  type: NodePort
  ports:
  - port: 5000
  selector:
    app: server
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      containers:
      - name: quicknoise
        image: quicknoise:latest
        ports:
        - containerPort: 5000
