k8s/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: quicknoise.home
    http:
      paths:
      - path: /
        backend:
          serviceName: server
          servicePort: 5000
